# snirf2bids

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  schema.json  setup.py
.github/workflows/: python-app.yml  release.yml  test.yml
defaults/: BIDS_fNIRS_sidecar_files.json  BIDS_fNIRS_subject_folder.json  BIDS_fNIRS_subject_folder_datatype.json  BIDS_raw_folder.json
docs/: README.md
snirf2bids/: __version__.py  snirf2bids.py
tests/: test.py
tests/data/: sub-01_task-inclusion_nirs.snirf  sub-02_task-test_nirs.json  test.json
